translation-tool/inputs/source_meta/objects/HSvc_SDD_CMCMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Name__c</fullName>
        <label>Key Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Name__c</fullName>
        <label>Section Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>HSvc_SDD_CMCMapping</label>
</CustomObject>